# omnidb-tui

./: Cargo.toml  LICENSE  README.md  SOLANA_COLOSSEUM_ROADMAP.md  alacritty_demo.toml  demo.cast  launch_in_alacritty.sh  omnidb_test.db  render_cast_to_mp4.py  runner.py  solana_test_report.md  tests.cast
src/: ai.rs  app.rs  bookmarks.rs  db.rs  ethereum.rs  main.rs  mongo.rs  redis.rs  solana.rs  ui.rs
