[package]
name = "omnidb-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "any"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
fuzzy-matcher = "0.3.7"
bs58 = "0.5.1"
base64 = "0.22.1"
